# P10

./: .gitignore  README.md  ang_accel.py  boat_dqn.py  boat_dqn_time.py  boat_env.py  boat_env_cleared.py  dh_transform.py  dqn_test.py  dynamic_square_torque.py  environment.yml  evaluations.npz  gpt.py  pyproject.toml  test_winch.py  wavegen-DESKTOP-D16VTSU.py  wavegen.py
boat_heave_comp_policy/: data  policy.optimizer.pth  policy.pth  system_info.txt
buoyantboat/env/: __init__.py  boat_env.py  dh_transform.py  wave_generator-DK-PF3VYTRE.py  wave_generator.py  winch.py  winch_dc.py
buoyantboat/simulate/: simulate.py  states_no_control.csv  states_no_control_no_wait.csv
buoyantboat/train/: boat_ddpg.py  boat_dqn.py  boat_ppo.py  boat_sac.py  boat_td3.py
buoyantboat/validate/: ObjectState.csv  compare all policies.py  ddpg_test.py  dqn_test.py  dqn_test_real_data.py  ppo_test.py  sac_test.py  sac_test_real_data.py  save_ue_wave.py  states_dqn_no_winch.csv  states_sac_no_winch_ue_data.csv  wave_data_ue.csv
csv/: plot.py
good_models/DDPG_ALL_STATES_vel_pos_rewards/boat_heave_sac_12/: events.out.tfevents.1715542302.DESKTOP-D16VTSU.5912.0
good_models/SAC_ALL_STATES_vel_pos_reward/boat_heave_sac_13/: events.out.tfevents.1715543050.DESKTOP-D16VTSU.8468.0
good_models/ddpg_position_only_random_position/boat_heave_ddpg_1/: events.out.tfevents.1715386277.DK-PF3VYTRE.50152.0
good_models/sac_position_only_random_posotion/boat_heave_sac_6/: events.out.tfevents.1715377261.DK-PF3VYTRE.50492.0
good_models/sac_velocity_linear_reward/boat_heave_sac_4/: events.out.tfevents.1715111979.DESKTOP-D16VTSU.18376.0
misc/: first_frame.csv  plot_wave.m  testcase1.py  wavegen.py
misc/r2/: r2test.py  r2test_ue_data.py  states_ddpg_no_winch.csv  states_dqn_no_winch_ue_data.csv  states_ppo_no_winch.csv
tb_logs/boat_heave_1/: events.out.tfevents.1711529625.DK-PF3VYTRE.14348.0
tb_logs/boat_heave_11/: events.out.tfevents.1713962348.DK-PF3VYTRE.24132.0
tb_logs/boat_heave_1711529236.386513_1/: events.out.tfevents.1711529236.DK-PF3VYTRE.29428.0
tb_logs/boat_heave_1711529411.0248356_1/: events.out.tfevents.1711529411.DK-PF3VYTRE.25188.0
tb_logs/boat_heave_2/: events.out.tfevents.1711530267.DK-PF3VYTRE.29836.0
tb_logs/boat_heave_3/: events.out.tfevents.1711530288.DK-PF3VYTRE.10232.0
tb_logs/boat_heave_4/: events.out.tfevents.1711530644.DK-PF3VYTRE.28184.0
tb_logs/boat_heave_5/: events.out.tfevents.1711530701.DK-PF3VYTRE.31608.0
tb_logs/boat_heave_6/: events.out.tfevents.1711530794.DK-PF3VYTRE.20636.0
tb_logs/boat_heave_7/: events.out.tfevents.1711530944.DK-PF3VYTRE.34496.0
tb_logs/boat_heave_8/: events.out.tfevents.1711531057.DK-PF3VYTRE.18132.0
tb_logs/boat_heave_ddpg_1/: events.out.tfevents.1715561356.DESKTOP-D16VTSU.32500.0
tb_logs/boat_heave_ddpg_2/: events.out.tfevents.1715561413.DESKTOP-D16VTSU.27692.0
tb_logs/boat_heave_ppo_1/: events.out.tfevents.1715592606.DESKTOP-D16VTSU.31684.0
tb_logs/boat_heave_sac_1/: events.out.tfevents.1715085128.DESKTOP-D16VTSU.29252.0  events.out.tfevents.1715255473.DK-PF3VYTRE.44940.0
tb_logs/boat_heave_sac_10/: events.out.tfevents.1715542140.DESKTOP-D16VTSU.27684.0
tb_logs/boat_heave_sac_11/: events.out.tfevents.1715542156.DESKTOP-D16VTSU.32240.0
tb_logs/boat_heave_sac_2/: events.out.tfevents.1715085705.DESKTOP-D16VTSU.8024.0  events.out.tfevents.1715260039.DK-PF3VYTRE.10944.0
tb_logs/boat_heave_sac_3/: events.out.tfevents.1715086014.DESKTOP-D16VTSU.19092.0  events.out.tfevents.1715359249.DK-PF3VYTRE.8064.0
tb_logs/boat_heave_sac_4/: events.out.tfevents.1715086647.DESKTOP-D16VTSU.28932.0  events.out.tfevents.1715359410.DK-PF3VYTRE.44132.0
tb_logs/boat_heave_sac_5/: events.out.tfevents.1715365585.DK-PF3VYTRE.18720.0
tb_logs/boat_heave_sac_6/: events.out.tfevents.1715531515.DESKTOP-D16VTSU.17912.0
tb_logs/boat_heave_sac_7/: events.out.tfevents.1715535945.DESKTOP-D16VTSU.21372.0
tb_logs/boat_heave_sac_8/: events.out.tfevents.1715536185.DESKTOP-D16VTSU.14796.0
tb_logs/boat_heave_sac_9/: events.out.tfevents.1715537188.DESKTOP-D16VTSU.32276.0
tb_logs_ddpg/boat_heave_ddpg_1M_2/: events.out.tfevents.1715899918.DESKTOP-D16VTSU.9920.0
tb_logs_ddpg/boat_heave_ddpg_1M_tau_05_1/: events.out.tfevents.1715987462.DESKTOP-D16VTSU.26640.0
tb_logs_ddpg/boat_heave_ddpg_new_1/: events.out.tfevents.1716636893.DESKTOP-D16VTSU.21992.0
tb_logs_dqn/boat_heave_dqn_1/: events.out.tfevents.1716509456.DESKTOP-D16VTSU.32716.0
tb_logs_dqn/boat_heave_dqn_2/: events.out.tfevents.1716509670.DESKTOP-D16VTSU.10452.0
tb_logs_dqn/boat_heave_dqn_3/: events.out.tfevents.1716511109.DESKTOP-D16VTSU.28284.0
tb_logs_dqn/boat_heave_dqn_4/: events.out.tfevents.1716574788.DESKTOP-D16VTSU.28628.0
tb_logs_dqn/boat_heave_dqn_5/: events.out.tfevents.1716574799.DESKTOP-D16VTSU.30592.0
tb_logs_dqn/boat_heave_dqn_6/: events.out.tfevents.1716575697.DESKTOP-D16VTSU.18228.0
tb_logs_dqn/boat_heave_dqn_7/: events.out.tfevents.1716576988.DESKTOP-D16VTSU.4376.0
tb_logs_ppo/boat_heave_ppo_1/: events.out.tfevents.1716635032.DESKTOP-D16VTSU.30992.0
tb_logs_ppo/boat_heave_ppo_2/: events.out.tfevents.1716635611.DESKTOP-D16VTSU.30424.0
tb_logs_sac/boat_heave_comp_SAC_policy_winch_model_1Mts_1/: events.out.tfevents.1715669712.DESKTOP-D16VTSU.32184.0
tb_logs_sac/boat_heave_comp_SAC_policy_winch_model_1Mts_2/: events.out.tfevents.1715670868.DESKTOP-D16VTSU.37992.0
tb_logs_sac/boat_heave_comp_SAC_policy_winch_model_dc_1/: events.out.tfevents.1716246653.DESKTOP-D16VTSU.14888.0
tb_logs_sac/boat_heave_comp_SAC_policy_winch_model_dc_2/: events.out.tfevents.1716247163.DESKTOP-D16VTSU.37932.0
tb_logs_sac/boat_heave_comp_SAC_policy_winch_model_dc_3/: events.out.tfevents.1716247252.DESKTOP-D16VTSU.29476.0
tb_logs_sac/boat_heave_comp_SAC_policy_winch_model_dc_no_termination_1/: events.out.tfevents.1716335550.DESKTOP-D16VTSU.14504.0
tb_logs_td3/boat_heave_td3_1M_tau_05_1/: events.out.tfevents.1716212196.DESKTOP-D16VTSU.9924.0
validate/: dqn_test.py  sac_test.py  sac_test_all_on_one.py
wave_prediction/: wave_prediction_cnn.py  wave_prediction_lstm.py
(+26 files in other folders)
